--- a/homework.html
+++ b/homework.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
+    <link rel="stylesheet" type="text/css" href="css/starter.css">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/logo_icon.png" type="image/x-icon">
    <title>Super Slick Company</title>
   </head>
   <body>
@@ -11,9 +17,9 @@
       <img src="images/logo.png" alt="" id = "logo">
       <nav>
         <ul class="nav_links">
-          <li class="nav_item"><a href="">About</a></li>
-          <li class="nav_item"><a href="">Prices</a></li>
-          <li class="nav_item"><a href="">Gallery</a></li>
+          <li class="nav_item"><a href="#skip">About</a></li>
+          <li class="nav_item"><a href="#pricing">Prices</a></li>
+          <li class="nav_item"><a href="#gallery">Gallery</a></li>
         </ul>
     </nav>
   </header>
