--- a/homework.html
+++ b/homework.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/starter.css">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -12,7 +13,7 @@
    <title>Super Slick Company</title>
   </head>
   <body>
-    <a class = "skip">Skip to Main Content</a>
+    <a class = "skip" href="#skip">Skip to Main Content</a>
     <header>
       <img src="images/logo.png" alt="" id = "logo">
       <nav>
